...
                    style: TextButton.styleFrom(
                      alignment: Alignment.centerLeft,
                      shape: RoundedRectangleBorder(
                        borderRadius: BorderRadius.zero,
                      ),
                    ),
                    child: Text("ATM Transactions", style: TextStyle(color: Color.fromRGBO(2, 165, 165, 1),),),
                  )
              ),

              // Settings Button
              SizedBox(
                  width: double.infinity,
...
